# PlanIt

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
header/: UI.h  date.h  debug.h  task.h  time.h
src/: UI.cpp  date.cpp  debug.cpp  task.cpp  time.cpp
test/: runTest  test.cpp
